[add]: Bug: When hovered over the different search criterias it was not visible. Please find the attached screenshot

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -104,9 +104,10 @@
 }
 
 .search-dropdown .list-item:hover {
-  background-color: transparent;
+  background-color: var(--background-color) !important;
 }
 .search-dropdown .list-item .search-filter-label {
+  color: var(--text-color);
   padding-left: 10px;
   cursor: pointer;
 }
